# serializer version: 1
# name: test_init_only
  dict({
    552: GiosStation(
      id=552,
      latitude=52.290864,
      longitude=21.042458,
      name='Warszawa, ul. Kondratowicza',
    ),
    562: GiosStation(
      id=562,
      latitude=52.053811,
      longitude=20.429892,
      name='Żyrardów, ul. Roosevelta',
    ),
  })
# ---
# name: test_no_indexes_data
  dict({
    552: GiosStation(
      id=552,
      latitude=52.290864,
      longitude=21.042458,
      name='Warszawa, ul. Kondratowicza',
    ),
    562: GiosStation(
      id=562,
      latitude=52.053811,
      longitude=20.429892,
      name='Żyrardów, ul. Roosevelta',
    ),
  })
# ---
# name: test_no_indexes_data.1
  GiosSensors(
    aqi=None,
    c6h6=None,
    co=None,
    no=Sensor(
      id=3759,
      index=None,
      name='nitrogen monoxide',
      value=0.6,
    ),
    no2=Sensor(
      id=3760,
      index=None,
      name='nitrogen dioxide',
      value=5.1,
    ),
    nox=Sensor(
      id=3761,
      index=None,
      name='nitrogen oxides',
      value=5.5,
    ),
    o3=Sensor(
      id=3762,
      index=None,
      name='ozone',
      value=83.9,
    ),
    pm10=Sensor(
      id=3764,
      index=None,
      name='particulate matter 10',
      value=7.6,
    ),
    pm25=Sensor(
      id=14688,
      index=None,
      name='particulate matter 2.5',
      value=2.3,
    ),
    so2=None,
  )
# ---
# name: test_valid_data_first_value
  dict({
    552: GiosStation(
      id=552,
      latitude=52.290864,
      longitude=21.042458,
      name='Warszawa, ul. Kondratowicza',
    ),
    562: GiosStation(
      id=562,
      latitude=52.053811,
      longitude=20.429892,
      name='Żyrardów, ul. Roosevelta',
    ),
  })
# ---
# name: test_valid_data_first_value.1
  GiosSensors(
    aqi=Sensor(
      id=None,
      index=None,
      name='AQI',
      value='good',
    ),
    c6h6=None,
    co=None,
    no=Sensor(
      id=3759,
      index=None,
      name='nitrogen monoxide',
      value=0.6,
    ),
    no2=Sensor(
      id=3760,
      index='very_good',
      name='nitrogen dioxide',
      value=5.1,
    ),
    nox=Sensor(
      id=3761,
      index=None,
      name='nitrogen oxides',
      value=5.5,
    ),
    o3=Sensor(
      id=3762,
      index='good',
      name='ozone',
      value=83.9,
    ),
    pm10=Sensor(
      id=3764,
      index='very_good',
      name='particulate matter 10',
      value=7.6,
    ),
    pm25=Sensor(
      id=14688,
      index='very_good',
      name='particulate matter 2.5',
      value=2.3,
    ),
    so2=None,
  )
# ---
# name: test_valid_data_second_value
  dict({
    552: GiosStation(
      id=552,
      latitude=52.290864,
      longitude=21.042458,
      name='Warszawa, ul. Kondratowicza',
    ),
    562: GiosStation(
      id=562,
      latitude=52.053811,
      longitude=20.429892,
      name='Żyrardów, ul. Roosevelta',
    ),
  })
# ---
# name: test_valid_data_second_value.1
  GiosSensors(
    aqi=Sensor(
      id=None,
      index=None,
      name='AQI',
      value='good',
    ),
    c6h6=None,
    co=None,
    no=Sensor(
      id=3759,
      index=None,
      name='nitrogen monoxide',
      value=0.6,
    ),
    no2=Sensor(
      id=3760,
      index='very_good',
      name='nitrogen dioxide',
      value=4.0,
    ),
    nox=Sensor(
      id=3761,
      index=None,
      name='nitrogen oxides',
      value=5.5,
    ),
    o3=Sensor(
      id=3762,
      index='good',
      name='ozone',
      value=80.7,
    ),
    pm10=Sensor(
      id=3764,
      index='very_good',
      name='particulate matter 10',
      value=7.4,
    ),
    pm25=Sensor(
      id=14688,
      index='very_good',
      name='particulate matter 2.5',
      value=2.3,
    ),
    so2=None,
  )
# ---
